- Avoid calling sched_catchlwp() if CPUs have different processor-sets. - sched_takecpu: check for psid earlier (be more strict).

PR/40419.